--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
 <body>
   <div class="topmenu">
     <ul class="menu-main">
-      <li class="l"><a href="main.html">Главная</a></li>
-      <li class="l"><a href="pg2.html" class="active">О нас</a></li>
-      <li class="l"><a href="pg3.html">Студии</a></li>
-      <li class="l"><a href="pg4.html">Тарифы</a></li>
-      <li class="l"><a href="pg1.html">Клубная карта</a></li>
-      <li class="l"><a href="pg5.html">Моя страница</a></li>
+      <li class="l"><a href="https://mariiaryzhova.github.io/main/">Главная</a></li>
+      <li class="l"><a href="https://mariiaryzhova.github.io/o_nas/" class="active">О нас</a></li>
+      <li class="l"><a href="https://mariiaryzhova.github.io/studii/">Студии</a></li>
+      <li class="l"><a href="https://mariiaryzhova.github.io/tariffs/">Тарифы</a></li>
+      <li class="l"><a href="https://mariiaryzhova.github.io/club_card/">Клубная карта</a></li>
+      <li class="l"><a href="https://mariiaryzhova.github.io/my_page/">Моя страница</a></li>
     </ul>
   </div>
   <div class="block2">
@@ -149,7 +149,7 @@
       </tr>
     </table>
   </div>
-  <div class="fi"><a href="fit.jpeg" target="_blank"> <img src="fit.jpeg" class="fit" title="Фитнес" /></div>
+  <div class="fi"><a href="fit.jpeg" target="_blank"> <img src="fit.jpeg" class="fit" title="СПОРТ - ЭТО ЖИЗНЬ" /></div>
   <div class="block4">
     <form action="https://ya.ru/?" id="UserEnter" name="UserEnter" target="_blank">
       <fieldset>
